exports[`test Cell renders and runs selectCell 1`] = `
<div
  className="root"
  onClick={[Function]}
  onDoubleClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "overflow": "visible",
    }
  }>
  <div
    className="border flexAuto">
    <span
      className="value"
      onKeyDown={[Function]}
      style={
        Object {
          "cursor": "default",
        }
      }>
      some string
    </span>
  </div>
</div>
`;

exports[`test Cell renders in edit mode 1`] = `
<div
  className="root editing"
  onClick={[Function]}
  onDoubleClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "overflow": "visible",
    }
  }>
  <div
    className="border flexAuto">
    <NullableCell
      cell={
        <Connect(StringCell)
          cancel={[Function]}
          field={
            Object {
              "description": "",
              "id": "cip3p48sj001e1jsmghwkdt2k",
              "isList": false,
              "isReadonly": true,
              "isSystem": true,
              "name": "description",
              "relatedModel": null,
              "typeIdentifier": "String",
            }
          }
          onKeyDown={[Function]}
          save={[Function]}
          value="some string" />
      }
      save={[Function]} />
  </div>
</div>
`;
